# pysoarlib

./: AgentConnector.py  IdentifierExtensions.py  LICENSE  LanguageConnector.py  README.md  RosieMessageParser.py  SVSCommands.py  SoarAgent.py  SoarClient.py  SoarUtils.py  SoarWME.py  TimeConnector.py  TimeInfo.py  WMInterface.py  WMView.py  __init__.py  pyproject.toml
example/: SimpleAgent.py  SimpleConnector.py  agent.config  example.config  run_agent.py  test-agent.soar  test.py
src/pysoarlib/: IdentifierExtensions.py  SVSCommands.py  SoarWME.py  TimeConnector.py
src/pysoarlib/example/: example.config  run_agent.py  test-agent.soar
src/pysoarlib/util/: WMNode.py  __init__.py  extract_wm_graph.py
util/: PrintoutIdentifier.py  __init__.py  parse_wm_printout.py  remove_tree_from_wm.py  update_wm_from_tree.py
